--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 /client/node_modules
 /client/.pnp
 /client/.pnp.js
+/client/package-lock.json
 /package-lock.json
+.vscode
 
 # testing
 /client/coverage
