--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /client/node_modules
 /client/.pnp
-/client/.pnp.js
+/client/.pnp.jsya
 /client/package-lock.json
 /package-lock.json
 /.vscode
