--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cors": "2.8.5",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
-    "stripe": "6.28.0"
+    "stripe": "6.28.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
